# jetbot_ros

./: CAMERA_FIX_README.md  CMakeLists.txt  Dockerfile  QUICK_FIX_GUIDE.md  check_opencv_gstreamer.py  frames_2025-10-29_02.13.46.gv  frames_2025-10-29_22.09.48.gv  frames_2025-11-23_00.23.48.gv  launch_log.txt  package.xml  setup.py  simple_camera.py  test.py  test_camera_initialize.py
config/: right.yaml  test
config/camera_calibration/left/: camera_left.yaml
config/camera_calibration/right/: camera_right.yaml  ost.txt
config/camera_calibration/stereo/: left.yaml  right.yaml
config/install/: local_setup.sh  setup.sh
config/left/: ost.txt
config/log/: latest_build
config/stereo/: ost.txt
install/: local_setup.sh  setup.sh
install/jetbot_ros/share/jetbot_ros/: package.sh
install/jetbot_ros/share/jetbot_ros/config/: camera_left.yaml  camera_right.yaml  left.yaml  right.yaml
install/jetbot_ros/share/jetbot_ros/config/camera_calibration/left/: camera_left.yaml
install/jetbot_ros/share/jetbot_ros/config/camera_calibration/right/: camera_right.yaml
install/jetbot_ros/share/jetbot_ros/launch/: data_collection.launch.py  dual_camera.launch.py  jetbot.launch.py  stereo_camera.launch.py
install/jetbot_ros/share/jetbot_ros/meshes/: wheel_left.STL  wheel_right.STL
install/jetbot_ros/share/jetbot_ros/rviz/: jetbot_mapping.rviz
install/jetbot_ros/share/jetbot_ros/urdf/: jetbot.urdf
jetbot_ros/: camera_node.py  combined_image.py  csi_camera_node.py  data_collection.py  motors_node.py  motors_nvidia.py  nav_model.py  stereo_depth_node.py  stereo_vision.py  teleop_keyboard.py  test_camera_claude_gray8.py  test_camera_gpt_gray8.py  test_depth.py
jetbot_ros/dnn/: navigation_model.py
launch/: jetbot.launch.py  jetbot_nvidia.launch.py  jetbot_test.launch.py  stereo_camera.launch.py
log/: latest_build
meshes/: arm1.STL  arm2.STL  base_link.STL  camera_left.STL  caster.STL  casterDriver.STL
rviz/: jetbot_mapping.rviz
scripts/: diagnose_camera.py  fix_camera_permissions.sh  fix_now.sh  simple_camera_test.py
urdf/: jetbot.urdf  jetbot.urdf.xacro
urdf/install/: local_setup.sh  setup.sh
urdf/log/: latest_build
