<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jetbot_ros</name>
  <version>0.2.0</version>
  <description>ROS2 package for JetBot with dual camera SLAM</description>
  <maintainer email="user@example.com">jetbot_user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
ㄎ～
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>